--- a/api/package.json
+++ b/api/package.json
@@ -7,9 +7,11 @@
   },
   "dependencies": {
     "@prisma/client": "3.13.0",
+    "bcrypt": "^5.0.1",
     "express": "4.18.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "4.17.13",
     "@types/node": "16.11.32",
     "prisma": "3.13.0",
