--- a/api/package.json
+++ b/api/package.json
@@ -9,11 +9,13 @@
     "@prisma/client": "3.13.0",
     "bcrypt": "^5.0.1",
     "express": "4.18.1",
-    "express-async-errors": "^3.1.1"
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "16.11.32",
     "prisma": "3.13.0",
     "ts-node": "10.7.0",
