--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,11 @@
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.2",
+    "@mui/material": "^5.8.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,4 +52,5 @@
   "devDependencies": {
     "@types/styled-components": "^5.1.25"
   }
+  
 }
